--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
   "name": "creep-tasks",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Tasks for your creeps",
-  "author": "Ben Bartlett",
+  "author": "Maintained by Nhan Ho",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bencbartlett/Creep-Tasks.git"
+    "url": "git+https://github.com/NhanHo/Creep-Tasks.git"
   },
-  "homepage": "https://github.com/bencbartlett/Creep-Tasks#readme",
+  "homepage": "https://github.com/NhanHo/Creep-Tasks#readme",
   "bugs": {
-    "url": "https://github.com/bencbartlett/Creep-Tasks/issues"
+    "url": "https://github.com/NhanHo/Creep-Tasks/issues"
   },
   "main": "dist/index.js",
   "types": "typings/creep-tasks.d.ts",
   "scripts": {
-    "build": "tsc -p .",
-    "compile": "tsc -p .",
+    "build": "rollup -c",
+    "compile": "rollcup -c",
     "clean": "rm -rf dist",
-    "test": "npm run clean && npm run build"
+    "test": "yarn run clean && yarn run build"
   },
-  "license": "Unlicense",
+  "license": "MIT",
+
   "devDependencies": {
-    "@types/lodash": "^3.10.1",
-    "rollup": "^0.55.3",
-    "rollup-plugin-clean": "^1.0.0",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-screeps": "0.1.2",
-    "rollup-plugin-typescript2": "^0.11.0",
-    "typescript": "^2.7.2"
+    "@types/node": "^13.13.1",
+    "@types/lodash": "3.10.1",
+    "@types/screeps": "^3.1.0",
+    "rollup": "^2.6.1",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "typescript": "^4.2",
+    "@types/chai": "^4.1.6",
+    "@types/screeps": "^3.1.0"
   },
   "dependencies": {
-    "@types/screeps": "^2.4.0"
   },
   "files": [
     "dist/**/*",
